css/style.css
/* ... */
.service .service-icon i {
    position: relative;
    font-size: 60px;
    color: black;
    transition: .3s;
}

.service .service-item:hover i {
    font-size: 75px;
}

.service .service-text {
    position: relative;
    width: calc(100% - 120px);
    padding: 0 30px;
}

.service .service-text h3 {
    margin-bottom: 10px;
    font-size: 20px;
    font-weight: 600;
    transition: 1s;
}

.service .service-text p {
    margin: 0;
    font-size: 16px;
    transition: 1s;
}

.service .service-item:hover .service-text h3,
.service .service-item:hover .service-text p {
    color: #ffffff;
}

@media (max-width: 575.98px) {
    .service .service-text h3 {
        font-size: 16px;
        margin-bottom: 5px;
    }
    
    .service .service-text p {
        font-size: 14px;
    }
}


/*******************************/
/******** Portfolio CSS ********/
/*******************************/
.portfolio {
    position: relative;
    padding: 45px 0 15px 0;
}

.portfolio #portfolio-filter {
    padding: 0;
    margin: -15px 0 25px 0;
    list-style: none;
    font-size: 0;
    text-align: center;
}

.portfolio #portfolio-filter li {
    cursor: pointer;
    display: inline-block;
    margin: 5px;
    padding: 6px 12px;
    font-size: 14px;
    font-weight: 600;
    color: #ffffff;
    background: #EF233C;
    border: 2px solid transparent;
    border-radius: 0;
    box-shadow: inset 0 0 0 50px #EF233C;
    transition: ease-out 0.3s;
    -webkit-transition: ease-out 0.3s;
    -moz-transition: ease-out 0.3s;
}

.portfolio #portfolio-filter li:hover,
.portfolio #portfolio-filter li.filter-active {
    color: #EF233C;
    background: transparent;
    box-shadow: inset 0 0 0 0 #EF233C;
    border-color: #EF233C;
}

.portfolio .portfolio-item {
    position: relative;
}

.portfolio .portfolio-wrap {
    position: relative;
    width: 100%;
}

.portfolio .portfolio-img {
    position: relative;
    overflow: hidden;
}

.portfolio .portfolio-img img {
    position: relative;
    width: 100%; 
    height: 100%; 
    object-fit: cover;
    transform: scale(1.1);
    transition: .5s;
}

.portfolio .portfolio-item:hover img {
    margin-left: 15px;
}

.portfolio .portfolio-text {
    position: relative;
    height: 300px;
    width: calc(100% - 30px);
    margin: 5px 5px 30px 30px;
    /* display: flex; */
    justify-content: center;
    align-items: center;
    background: #ffffff;
    box-shadow: 0 0 15px rgba(0, 0, 0, .12);
    padding: 12px;
}

.portfolio .portfolio-text h3 {
    width: calc(100% - 70px);
    font-size: 18px;
    font-weight: 600;
    margin: 0 0 0 15px;
    white-space: nowrap;
    overflow: hidden;
}

.portfolio .portfolio-text a.btn {
    width: 50px;
    height: 50px;
    padding: 5px 5px 5px 5px;
    /* display: flex; */
    align-items: center;
    justify-content: center;
    font-size: 45px;
    font-weight: 100;
}

.portfolio .portfolio-item:hover a.btn {
    color: #EF233C;
    background: transparent;
    box-shadow: inset 0 0 0 0 #EF233C;
    border-color: #EF233C;
}


/*******************************/
/********* Banner CSS **********/
/*******************************/
.banner {
    position: relative;
    width: 100%;
    margin: 45px 0;
    padding: 90px 0;
    background: #EF233C;
}

.banner .container {
    max-width: 750px;
    text-align: center;
}

.banner .section-header {
    margin-bottom: 20px;
}

.banner .section-header p {
    color: #414141;
    background: transparent;
}

.banner .section-header p::after {
    display: none;
}

.banner .section-header h2 {
    color: #ffffff;
}

.banner .section-header h2 span {
    color: #414141;
    font-size: 50px;
}

.banner .banner-text p {
    font-size: 18px;
    color: #ffffff;
}

.banner .banner-text .btn {
    margin-top: 15px;
    color: #EF233C;
    background: #ffffff;
    box-shadow: inset 0 0 0 50px #ffffff;
}

.banner .banner-text .btn:hover {
    color: #ffffff;
    background: transparent;
    box-shadow: inset 0 0 0 0 #ffffff;
    border-color: #ffffff;
}


/*******************************/
/********* Pricing CSS *********/
/*******************************/
.price {
    position: relative;
    width: 100%;
    padding: 45px 0 15px 0;
}

.price .row {
    padding: 0 15px;
}

.price .col-md-4 {
    padding: 0;
}

.price .price-item {
    position: relative;
    margin-bottom: 30px;
    background: #ffffff;
}

.price .featured-item {
    box-shadow: 0 0 30px rgba(0, 0, 0, .2);
    z-index: 1;
}

.price .price-header,
.price .price-body,
.price .price-footer {
    position: relative;
    text-align: center;
}

.price .price-header {
    padding: 45px 0 30px 0;
    color: #414141;
}

.price .price-item.featured-item .price-header {
    color: #EF233C;
}

.price .price-title h2 {
    font-size: 25px;
    font-weight: 400;
    text-transform: uppercase;
}

.price .price-prices h2 {
    font-size: 45px;
    font-weight: 700;
    margin-left: 10px;
}

.price .price-prices h2 small {
    position: absolute;
    font-size: 18px;
    font-weight: 400;
    margin-top: 9px;
    margin-left: -12px;
}

.price .price-prices h2 span {
    margin-left: 1px;
    font-size: 18px;
    font-weight: 400;
}

.price .price-item.featured-item h2 {
    color: #EF233C;
}

.price .price-body {
    padding: 0 0 20px 0;
}

.price .price-description ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

.price .price-description ul li {
    padding: 0 0 20px 0;
}

.price .price-item .price-action {
    padding-bottom: 45px;
}

.price .price-item .price-action .btn {
    color: #ffffff;
    background: #414141;
    box-shadow: inset 0 0 0 50px #414141;
}

.price .price-item .price-action .btn:hover {
    color: #414141;
    background: transparent;
    box-shadow: inset 0 0 0 0 #414141;
    border-color: #414141;
}

.price .price-item.featured-item .price-action .btn {
    color: #ffffff;
    background: #EF233C;
    box-shadow: inset 0 0 0 50px #EF233C;
}
/* ... */

